Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/patterns/CastConversionMatch.out
CastConversionMatch.java:11:26: compiler.err.type.found.req: int, (compiler.misc.type.req.class.array)
1 error
